      - Added describeAnnotations(MethodInfo, ServerResource) static
        method on MethodInfo.
      - Renamed WadlServerResource#autoDescribed into autoDescribing.
      - The private WadlServerResource#describe(ResourceInfo) method is
        now protected. Also renamed getParametersInfo() method into
        describeParameters(), and isDescribable(Method) into
        canDescribe(Method) for naming consistency. 
    - Bugs fixed
      - Thread local variables are now cleared correctly.
        Prevented unloading of WAR files or OSGi bundles
        using Restlet. Reported by Felix Leipold, 
        Dustin Jenkins and Rickard Oberg.
      - Fixed generation of client proxies in the GWT edition, when the
        annotated method declares an entity as a Representation instance.
      - Fixed handling of non ASCII characters in the GWT edition 
        when running in hosted mode.
        Reported by Giovani Pieri.
      - Removed XML header in JSON documents produced by XStream.
        Reported by Louis Huh.
      - Empty representations (with a size of 0) are considered again
        as not available. Reported by David Fogel and Eric Hough.
      - The log service now logs "0" instead of the entity size when this
        entity isn't effectively sent (204 or 304 status).
      - Atom feed and entry readers now set the media type of the inline
        content. Reported by Martin Svensson.
      - Fixed bug in relative references computation.
        Contributed by Tal Liron.
      - Client connectors automatically created by the ClientResource
        are now automatically stopped upon garbage collection to prevent
        dormant threads. Reported by Dustin Jenkins and TK Kocheran.
      - Parameters on Attachments in Component's XML configuration were
        not taken into account. Contributed by Alex Milowski.
      - Fixed bug avoiding the usage of HashMap in annotated interfaces
        in the GWT edition. 