@@ -1,7 +1,10 @@
 package org.restlet.example.book.restlet.ch07.sec2.server;
 
 import org.restlet.example.book.restlet.ch03.sect5.sub5.common.AccountResource;
+import org.restlet.ext.wadl.MethodInfo;
+import org.restlet.ext.wadl.RepresentationInfo;
 import org.restlet.ext.wadl.WadlServerResource;
+import org.restlet.representation.Variant;
 import org.restlet.resource.ResourceException;
 
 /**
@@ -12,6 +15,14 @@ public class AccountServerResource extends WadlServerResource implements
 
     /** The account identifier. */
     private int accountId;
+
+    @Override
+    protected RepresentationInfo describe(MethodInfo methodInfo,
+            Class<?> representationClass, Variant variant) {
+        RepresentationInfo result = new RepresentationInfo(variant);
+        result.setReference("account");
+        return result;
+    }
 
     /**
      * Retrieve the account identifier based on the URI path variable
@@ -34,15 +45,15 @@ public class AccountServerResource extends WadlServerResource implements
         }
     }
 
+    public void remove() {
+        AccountsServerResource.getAccounts().remove(this.accountId - 1);
+    }
+
     public String represent() {
         return AccountsServerResource.getAccounts().get(this.accountId - 1);
     }
 
     public void store(String account) {
         AccountsServerResource.getAccounts().set(this.accountId - 1, account);
-    }
-
-    public void remove() {
-        AccountsServerResource.getAccounts().remove(this.accountId - 1);
     }
 }
