@@ -3,8 +3,14 @@ package org.restlet.example.book.restlet.ch07.sec2.server;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 
+import org.restlet.data.MediaType;
 import org.restlet.example.book.restlet.ch03.sect5.sub5.common.AccountsResource;
+import org.restlet.ext.wadl.ApplicationInfo;
+import org.restlet.ext.wadl.DocumentationInfo;
+import org.restlet.ext.wadl.MethodInfo;
+import org.restlet.ext.wadl.RepresentationInfo;
 import org.restlet.ext.wadl.WadlServerResource;
+import org.restlet.representation.Variant;
 import org.restlet.resource.ResourceException;
 
 /**
@@ -15,6 +21,26 @@ public class AccountsServerResource extends WadlServerResource implements
 
     /** Static list of accounts stored in memory. */
     private static final List<String> accounts = new CopyOnWriteArrayList<String>();
+
+    @Override
+    protected void describe(ApplicationInfo applicationInfo) {
+        RepresentationInfo rep = new RepresentationInfo(MediaType.TEXT_PLAIN);
+        rep.setIdentifier("account");
+        applicationInfo.getRepresentations().add(rep);
+
+        DocumentationInfo doc = new DocumentationInfo();
+        doc.setTitle("Account");
+        doc.setTextContent("Simple string containing the account ID");
+        rep.getDocumentations().add(doc);
+    }
+
+    @Override
+    protected RepresentationInfo describe(MethodInfo methodInfo,
+            Class<?> representationClass, Variant variant) {
+        RepresentationInfo result = new RepresentationInfo(variant);
+        result.setReference("account");
+        return result;
+    }
 
     @Override
     protected void doInit() throws ResourceException {
